--- a/ex_2/q3_char-rnn-generation.ipynb
+++ b/ex_2/q3_char-rnn-generation.ipynb
@@ -40,7 +40,7 @@
      "grade": false,
      "grade_id": "cell-3a1bca1dbb7d0069",
      "locked": true,
-     "schema_version": 3.0,
+     "schema_version": 3,
      "solution": false,
      "task": false
     }
@@ -65,7 +65,7 @@
      "grade": false,
      "grade_id": "cell-7301754e4d655d01",
      "locked": true,
-     "schema_version": 3.0,
+     "schema_version": 3,
      "solution": false,
      "task": false
     }
@@ -85,14 +85,16 @@
      "grade": true,
      "grade_id": "cell-e19646c939692ee9",
      "locked": false,
-     "points": 4.0,
-     "schema_version": 3.0,
+     "points": 4,
+     "schema_version": 3,
      "solution": true,
      "task": false
     }
    },
    "source": [
-    "**WRITE YOUR ANSWER IN THIS CELL**\n"
+    "**WRITE YOUR ANSWER IN THIS CELL**\n",
+    "From question 2.c. we can see that the operations we need to perform in both forward and backward dependent on |V|, which can be pretty big in Word-based model. However, in Character-based model |V| is limitted and not so big.\n",
+    "On the other hand, in case of Word-based model, the model can learn and perform better result because the generalization is better in Word-based case than Character-based."
    ]
   },
   {
@@ -106,7 +108,7 @@
      "grade": false,
      "grade_id": "cell-ebc0d8ae3061c0fc",
      "locked": true,
-     "schema_version": 3.0,
+     "schema_version": 3,
      "solution": false,
      "task": false
     }
@@ -134,7 +136,7 @@
      "grade": false,
      "grade_id": "cell-aa2773db1bef7014",
      "locked": true,
-     "schema_version": 3.0,
+     "schema_version": 3,
      "solution": false,
      "task": false
     }
@@ -157,7 +159,7 @@
      "grade": false,
      "grade_id": "cell-cce75419c097f3fd",
      "locked": true,
-     "schema_version": 3.0,
+     "schema_version": 3,
      "solution": false,
      "task": false
     },
@@ -200,7 +202,7 @@
      "grade": false,
      "grade_id": "cell-d795f907dd7922f3",
      "locked": true,
-     "schema_version": 3.0,
+     "schema_version": 3,
      "solution": false,
      "task": false
     }
@@ -221,7 +223,7 @@
      "grade": false,
      "grade_id": "cell-379f229536dae19b",
      "locked": true,
-     "schema_version": 3.0,
+     "schema_version": 3,
      "solution": false,
      "task": false
     },
@@ -273,7 +275,7 @@
      "grade": false,
      "grade_id": "cell-fcbb2d73f4e442fb",
      "locked": true,
-     "schema_version": 3.0,
+     "schema_version": 3,
      "solution": false,
      "task": false
     }
@@ -307,7 +309,7 @@
      "grade": false,
      "grade_id": "cell-1640492438386e87",
      "locked": false,
-     "schema_version": 3.0,
+     "schema_version": 3,
      "solution": true,
      "task": false
     },
@@ -365,7 +367,7 @@
      "grade": false,
      "grade_id": "cell-b9299fddeb082b4e",
      "locked": true,
-     "schema_version": 3.0,
+     "schema_version": 3,
      "solution": false,
      "task": false
     }
@@ -385,7 +387,7 @@
      "grade": false,
      "grade_id": "cell-83bf9e1b0374206c",
      "locked": true,
-     "schema_version": 3.0,
+     "schema_version": 3,
      "solution": false,
      "task": false
     }
@@ -406,7 +408,7 @@
      "grade": false,
      "grade_id": "cell-5360afdd0b03b1f4",
      "locked": true,
-     "schema_version": 3.0,
+     "schema_version": 3,
      "solution": false,
      "task": false
     },
@@ -445,7 +447,7 @@
      "grade": false,
      "grade_id": "cell-6e7b3d9e8c9396bb",
      "locked": true,
-     "schema_version": 3.0,
+     "schema_version": 3,
      "solution": false,
      "task": false
     }
@@ -466,7 +468,7 @@
      "grade": false,
      "grade_id": "cell-d3539c5f1d96a188",
      "locked": true,
-     "schema_version": 3.0,
+     "schema_version": 3,
      "solution": false,
      "task": false
     },
@@ -494,7 +496,7 @@
      "grade": false,
      "grade_id": "cell-16d13f3b273395ac",
      "locked": true,
-     "schema_version": 3.0,
+     "schema_version": 3,
      "solution": false,
      "task": false
     }
@@ -517,7 +519,7 @@
      "grade": false,
      "grade_id": "cell-44ab27a8fee696ad",
      "locked": true,
-     "schema_version": 3.0,
+     "schema_version": 3,
      "solution": false,
      "task": false
     },
@@ -565,7 +567,7 @@
      "grade": false,
      "grade_id": "cell-1d3fd015fe8f64d1",
      "locked": true,
-     "schema_version": 3.0,
+     "schema_version": 3,
      "solution": false,
      "task": false
     }
@@ -585,7 +587,7 @@
      "grade": false,
      "grade_id": "cell-a209b293a8850a57",
      "locked": true,
-     "schema_version": 3.0,
+     "schema_version": 3,
      "solution": false,
      "task": false
     }
@@ -606,7 +608,7 @@
      "grade": false,
      "grade_id": "cell-e246cbd9689e1a6d",
      "locked": true,
-     "schema_version": 3.0,
+     "schema_version": 3,
      "solution": false,
      "task": false
     },
@@ -642,7 +644,7 @@
      "grade": false,
      "grade_id": "cell-05ce9b9275e0d1cc",
      "locked": true,
-     "schema_version": 3.0,
+     "schema_version": 3,
      "solution": false,
      "task": false
     }
@@ -663,7 +665,7 @@
      "grade": false,
      "grade_id": "cell-cb78afef7022f9a1",
      "locked": true,
-     "schema_version": 3.0,
+     "schema_version": 3,
      "solution": false,
      "task": false
     },
@@ -694,8 +696,8 @@
      "grade": true,
      "grade_id": "cell-98f46bec0b8c87cc",
      "locked": true,
-     "points": 10.0,
-     "schema_version": 3.0,
+     "points": 10,
+     "schema_version": 3,
      "solution": false,
      "task": false
     }
@@ -716,7 +718,7 @@
      "grade": false,
      "grade_id": "cell-baf25642209867dc",
      "locked": true,
-     "schema_version": 3.0,
+     "schema_version": 3,
      "solution": false,
      "task": false
     }
@@ -737,7 +739,7 @@
      "grade": false,
      "grade_id": "cell-4900f92ae503be69",
      "locked": true,
-     "schema_version": 3.0,
+     "schema_version": 3,
      "solution": false,
      "task": false
     },
@@ -980,7 +982,7 @@
      "grade": false,
      "grade_id": "cell-ff9d72dafefa0a23",
      "locked": true,
-     "schema_version": 3.0,
+     "schema_version": 3,
      "solution": false,
      "task": false
     }
@@ -1003,7 +1005,7 @@
      "grade": false,
      "grade_id": "cell-f91bb597844b8f7d",
      "locked": true,
-     "schema_version": 3.0,
+     "schema_version": 3,
      "solution": false,
      "task": false
     },
@@ -1056,7 +1058,7 @@
      "grade": false,
      "grade_id": "cell-dac1f386e2b526f5",
      "locked": true,
-     "schema_version": 3.0,
+     "schema_version": 3,
      "solution": false,
      "task": false
     }
@@ -1221,7 +1223,7 @@
      "grade": false,
      "grade_id": "cell-08d4f5f563b097a0",
      "locked": true,
-     "schema_version": 3.0,
+     "schema_version": 3,
      "solution": false,
      "task": false
     }
@@ -1242,8 +1244,8 @@
      "grade": true,
      "grade_id": "cell-bfdb7d9e747067db",
      "locked": false,
-     "points": 6.0,
-     "schema_version": 3.0,
+     "points": 6,
+     "schema_version": 3,
      "solution": true,
      "task": false
     }
